[gd_scene load_steps=2 format=3 uid="uid://dug0djwlj8lba"]

[ext_resource type="Script" path="res://Scenes/Movement/Dash.gd" id="1_8mmil"]

[node name="Dash" type="Node"]
script = ExtResource("1_8mmil")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
